syntax = "proto3";

package pb;

option go_package = "./pb";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
}
